CSS spacing fixes

--- a/Packages/Sites/Sfi.Sfi/Frontend/scss/Molecules/ContentBlocks/_Figure.scss
+++ b/Packages/Sites/Sfi.Sfi/Frontend/scss/Molecules/ContentBlocks/_Figure.scss
@@ -1,5 +1,5 @@
 .Figure{
-	margin: $u 0;
+	margin: $spacingBetweenContentBlocks 0;
 	// display: table;
 	figcaption{
 		@extend .ServiceEm;
