--- a/Packages/Sites/Sfi.Sfi/Frontend/scss/Organisms/_Article.scss
+++ b/Packages/Sites/Sfi.Sfi/Frontend/scss/Organisms/_Article.scss
@@ -19,10 +19,6 @@
 	@extend .Service--Small;
 	margin-right: 2*$u;
 }
-.Article-CoverPhoto .Figure {
-	margin-top: 0;
-	margin-bottom: 0;
-}
 
 .Article-Bar {
 	margin-bottom: $u;
