--- a/Packages/Sites/Sfi.Sfi/Frontend/scss/Quarks/_spacing.scss
+++ b/Packages/Sites/Sfi.Sfi/Frontend/scss/Quarks/_spacing.scss
@@ -15,10 +15,12 @@ $intervals: (
         margin: $intervalValue*$u !important;
     }
     .marginVertical-#{$intervalName}{
-        margin: $intervalValue*$u auto !important;
+        margin-top: $intervalValue*$u !important;
+        margin-bottom: $intervalValue*$u !important;
     }
     .marginHorizontal-#{$intervalName}{
-        margin: auto $intervalValue*$u !important;
+        margin-left: $intervalValue*$u !important;
+        margin-right: $intervalValue*$u !important;
     }
     .marginTop-#{$intervalName}{
         margin-top: $intervalValue*$u !important;
@@ -37,10 +39,12 @@ $intervals: (
         padding: $intervalValue*$u !important;
     }
     .paddingVertical-#{$intervalName}{
-        padding: $intervalValue*$u 0 !important;
+        padding-top: $intervalValue*$u !important;
+        padding-bottom: $intervalValue*$u !important;
     }
     .paddingHorizontal-#{$intervalName}{
-        padding: 0 $intervalValue*$u !important;
+        padding-left: $intervalValue*$u !important;
+        padding-right: $intervalValue*$u !important;
     }
     .paddingTop-#{$intervalName}{
         padding-top: $intervalValue*$u !important;
